test/Runner/errors/tests/MI/Seed/Test.seedconf1.js
mi("Suite", () => {
	seed('Seed', () => {

	}, { a: lol });
});